--- a/ui/static/sass/styles.scss
+++ b/ui/static/sass/styles.scss
@@ -26,7 +26,7 @@ $breakpoint-navigation-threshold: 820px;
   padding: 1rem 2rem 2rem;
 }
 
-.login-button {
+.oidc-login-button {
   display: flex;
   justify-content: flex-start;
   overflow: hidden;
